<resources>
    <string name="merchant_app_name">EzeShop Merchant</string>
    <string name="customer_app_name">EzeShop Customer</string>
    <string name="agent_app_name">EzeShop Internal</string>
    <string name="Forgot_id_passwd_label">Forgot  User ID  or  Password ?</string>
    <string name="Forgot_id_link">User ID</string>
    <string name="Forgot_passwd_label">Forgot  Password ?</string>
    <string name="Forgot_passwd_link">Password</string>
    <string name="Help_TnC_label">Help | Terms \u0026 Conditions</string>
    <string name="Help_link">Help</string>
    <string name="TnC_link">Terms \u0026 Conditions</string>
    <string name="Contact_TnC_label">Contact Us | Terms \u0026 Conditions</string>
    <string name="Contact_link">Contact Us</string>
    <string name="cust_mobile_change_info">Customer will have <b>Limited</b> access for %s minutes after Mobile Number change.\nOnly \'CREDIT\' transactions will be allowed.</string>
    <string name="cust_pin_reset_info">New PIN will be sent after %s minutes to the registered mobile number</string>
    <string name="mchnt_remove_notice_to_cust">This Merchant is under Removal notice. Please use all your balance with it, before %s.</string>
    <string name="reset_passwd_info">New password will be sent on your registered Mobile number after %s minutes.\n\nYou will not be able to login using old password till then.</string>
    <string name="mchnt_txn_history_info">View Transactions done in last %s days.</string>
    <string name="addCashSummary">%s ability to Add Cash to Customer Account.</string>
    <string name="addCBSummary">%s%% of Bill Amount is given as Cashback to Customer.\nIf 0%%, means No Cashback is given.</string>
    <string name="addExtraCBSummary">%s%% of \'Cash Added\' to Customer Account is given as \'Extra Cashback\'.\nIf 0%%, means No Extra Cashback is given.</string>
    <string name="minCashExtraCBSummary">Extra Cashback applies, only if \'Cash Added\' to Customer Account (in single go) is more than %s.</string>
    <string name="passwordSummary">Change your account password.</string>
    <string name="regdMobileSummary">"Change \'%s\' as Registered Mobile number."</string>
    <string name="emailSummary">"Change \'%s\' as contact Email ID."</string>
    <string name="contactPhoneSummary">"Change \'%s\' as Business Contact Phone number.\nDo not add 0 in start."</string>
    <string name="ops_no_data_info">No Operations done in last %s days.</string>
    <string name="serviceNaDefaultUrl">http://www.whysotechnologies.com/backsoon</string>
    <string name="empty_in_angle_brackets">\u003Cempty\u003E</string>
    <string name="none_in_angle_brackets">\u003Cnone\u003E</string>
    <string name="Rs">\u20B9</string>
    <string name="Rs_space">\u20B9\u0020</string>
    <string name="Rs_plus">+ \u20B9</string>
    <string name="Rs_minus">- \u20B9</string>
    <string name="Rs_0">\u20B9 0</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="input_merchant_id_hint">User ID</string>
    <string name="login_button_label">LOGIN</string>
    <string name="Register_label">No account yet? Register now</string>
    <string name="register_link">Register now</string>
    <string name="cash_paid_other_label">Other</string>
    <string name="title_activity_register_merchant">Register Merchant</string>
    <string name="title_activity_terms_conditions">Terms and Conditions</string>
    <string name="mobile_as_id">Use Mobile number as Merchant ID</string>
    <string name="agree_terms_label">I have read and agree to all terms and conditions.</string>
    <string name="agree_terms_link">terms and conditions</string>
    <string name="login_label">Already a member? Login</string>
    <string name="login_link">Login</string>
    <string name="date_picker_title">Select Date</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="permission_location_rationale">Access to the location is needed for registration</string>
    <string name="no_location_permission">This application cannot run because it does not have the location permission.  The application will now exit.</string>
    <string name="permission_phone_state_rationale">Access to phone state is needed for security</string>
    <string name="no_phone_state_permission">This application cannot run because it does not have the Phone State permission.  The application will now exit.</string>
    <string name="permission_storage_rationale">Access required to store and read app files like display image, statements etc..</string>
    <string name="permission_write_storage_rationale">Access to the storage is required to download/email statement and customer data files.</string>
    <string name="no_write_storage_permission">External Storage permission is mandatory. Cannot proceed with login.</string>
    <string name="no_camera_permission">camera permission is mandatory. Cannot proceed with login.</string>
    <string-array name="mchnt_disable_reasons_array">
        <item>None</item>
        <item>Lost Mobile</item>
        <item>Forgot Password</item>
        <item>Suspect Security Issue</item>
        <item>Other</item>
    </string-array>
    <string-array name="cust_disable_reasons_array">
        <item>None</item>
        <item>Lost Mobile</item>
        
        <item>Forgot PIN</item>
        <item>Suspect Security Issue</item>
        <item>Other</item>
    </string-array>
    <string-array name="cust_limited_reasons_array">
        <item>None</item>
        <item>Lost Mobile</item>
        
        <item>Forgot PIN</item>
        <item>Suspect Security Issue</item>
        <item>Other</item>
    </string-array>
    <string-array name="merchant_dashboard_type_array">
        <item>Customers</item>
        <item>Cashback</item>
        <item>Cash Account</item>
        <item>Bill Amount</item>
    </string-array>
    <string name="category_hint">* Business category</string>
    <string name="city_hint">City/District</string>
    <string name="state_hint">State</string>
    <string name="address_section_label">* Address</string>
    <string name="brand_char_limit">32</string>
    <string name="full_name_char_limit">30</string>
    <string name="pincode_char_limit">6</string>
    <string name="customer_name_char_limit">15</string>
    <string name="email_char_limit">150</string>
    <string name="dob_char_limit">8</string>
    <string name="passwd_char_limit">10</string>
    <string name="mobile_char_limit">10</string>
    <string name="address_char_limit">200</string>
    <string name="cash_char_limit">8</string>
    <string name="cb_rate_char_limit">4</string>
    <string name="pin_char_limit">4</string>
    <string name="otp_char_limit">5</string>
    <string name="merchant_id_char_limit">8</string>
    <string name="customer_internal_id_char_limit">6</string>
    <string name="agent_id_char_limit">7</string>
    <string name="max_str_limit">300</string>
    <string name="return_cash_detail">[ - %1$d ]</string>
</resources>