<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/windowBackground">

    <EditText
        style="@style/Dialog_title"
        android:id="@+id/label_title"
        android:text="CHANGE  MOBILE"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/label_title">

        <LinearLayout
            style="@style/LL_Vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/XL_space"/>

            <LinearLayout
                style="@style/LL_Horizontal_paddingSidesXL"
                android:id="@+id/layout_dob">

                <ImageView
                    style="@style/Imageview_Left_Column"
                    android:src="@drawable/ic_verified_user_white_24dp"/>

                <EditText
                    style="@style/Edittext_only_view_small"
                    android:id="@+id/label_information_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="'Date of Birth' in DDMMYYYY format \n(as provided during registration)" />
            </LinearLayout>

            <EditText
                style="@style/Edittext_only_view_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_dob2"
                android:text="E.g. 06031983 in place of '06 March 1983'" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/medium_space"/>

            <EditText
                android:id="@+id/input_dob"
                style="@style/MyEdittext_Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Date of Birth (DDMMYYYY)"
                android:maxLength="@string/dob_char_limit"
                android:inputType="number"
                android:gravity="center"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/large_space"/>

            <LinearLayout
                style="@style/LL_Horizontal_paddingSidesXL">

                <ImageView
                    style="@style/Imageview_Left_Column"
                    android:src="@drawable/ic_phone_android_white_24dp"/>

                <EditText
                    style="@style/Edittext_only_view_small"
                    android:id="@+id/label_new_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text="Enter New Mobile number to set" />
            </LinearLayout>

            <EditText
                android:id="@+id/input_new_mobile"
                style="@style/MyEdittext_Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="New Mobile"
                android:maxLength="@string/mobile_char_limit"
                android:gravity="center"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/medium_space"/>

            <LinearLayout
                style="@style/LL_Horizontal_paddingSidesXL">

                <ImageView
                    style="@style/Imageview_Left_Column"
                    android:src="@drawable/ic_phone_android_white_24dp"
                    android:visibility="invisible"/>

                <EditText
                    style="@style/Edittext_only_view_small"
                    android:id="@+id/label_new_mobile2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text="Confirm New Mobile number" />
            </LinearLayout>

            <EditText
                android:id="@+id/input_new_mobile2"
                style="@style/MyEdittext_Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="Confirm New Mobile"
                android:maxLength="@string/mobile_char_limit"
                android:gravity="center"
                android:imeOptions="actionDone"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/large_space"/>

            <LinearLayout
                style="@style/LL_Horizontal_paddingSidesXL"
                android:background="@color/primary_highlight">

                <ImageView
                    style="@style/Imageview_Left_Column"
                    android:src="@drawable/ic_security_white_24dp" />

                <EditText
                    style="@style/Edittext_only_view_small"
                    android:id="@+id/label_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Provide OTP as received on New Mobile" />
            </LinearLayout>

            <EditText
                android:id="@+id/input_otp"
                style="@style/MyEdittext_Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:hint="Enter OTP"
                android:maxLength="@string/otp_char_limit"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:background="@color/primary_highlight"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>